ros2_ws/log/build_2022-05-28_08-02-39/ldmk_package/stderr.log
  File "/home/user/ros2_ws/install/ldmk_package/lib/python3.8/site-packages/ldmk_package/teleop_keyboard.py", line 156
    print(30*'_ ')
    ^
SyntaxError: invalid syntax

